--- a/src/components/Menu/LeftMenu.css
+++ b/src/components/Menu/LeftMenu.css
@@ -28,7 +28,7 @@
     text-decoration: underline;
 }
 
-.ScheduleValidation01{
+.LeftMenu{
     position: absolute;
     width: 25%;
     height: 100%;
@@ -37,7 +37,7 @@
     background: #007afb;
 }
 
-.ScheduleValidation01 h1{
+.LeftMenu h1{
     position: absolute;
     width: 236px;
     height: 61px;
@@ -53,7 +53,7 @@
     font-family: sans-serif;
 }
 
-.ScheduleValidation01 h2{
+.LeftMenu h2{
     position: absolute;
     width: 60px;
     height: 51px;
@@ -68,7 +68,7 @@
 
 }
 
-.ScheduleValidation01 h3{
+.LeftMenu h3{
     width: 908px;
     height: 50px;
     font-family: 'Inter';
