--- a/src/screens/Versions/UpdateVersions.css
+++ b/src/screens/Versions/UpdateVersions.css
@@ -53,6 +53,12 @@
    display: flex;
 }
 
+.Icons-flex img {
+    border: 0;
+    width: 40px;
+    height: 40px;
+}
+
 .Bt-size1-updateC {
     width: 4vw;
     height: 4vh;
@@ -184,7 +190,7 @@
 }
 
 .Save-return-buttons {
-    flex: 1;
+    flex: 0 0 35%;
 }
 
 .Receipts-Buttons {
