--- a/src/components/Curriculum/EntriesMap.css
+++ b/src/components/Curriculum/EntriesMap.css
@@ -9,6 +9,10 @@
 
 .Entries-maped .Icons {
     padding: 3px;
+    margin-right: 0.3vw;
+    width: 30px;
+    height: 30px;
+    border: 0;
 }
 
 .Change-color-p {
@@ -39,8 +43,4 @@
     position: relative;
     top: 1vh;
     left: 0.2vw;
-}
-
-.Up-icon .WithoutReceipt {
-    margin-right: 0.3vw;
 }
